--- a/pangolin/templates/config.yml
+++ b/pangolin/templates/config.yml
@@ -48,10 +48,10 @@ rate_limits:
     max_requests: 500
 
 email:
-  smtp_host: "in-v3.mailjet.com"
-  smtp_port: 587
+  smtp_host: "{{ op://${VAULT}/Pangolin/E-mail/SMTP Host }}"
+  smtp_port: "{{ op://${VAULT}/Pangolin/E-mail/SMTP Port }}"
   smtp_user: "{{ op://${VAULT}/Pangolin/E-mail/SMTP User }}"
-  smtp_pass: ""
+  smtp_pass: "{{ op://${VAULT}/Pangolin/E-mail/SMTP Password }}"
 
 flags:
   require_email_verification: false
