--- a/pangolin/templates/config.yml
+++ b/pangolin/templates/config.yml
@@ -52,6 +52,7 @@ email:
   smtp_port: {{ op://${VAULT}/Pangolin/E-mail/SMTP Port }}
   smtp_user: "{{ op://${VAULT}/Pangolin/E-mail/SMTP User }}"
   smtp_pass: "{{ op://${VAULT}/Pangolin/E-mail/SMTP Password }}"
+  no_reply: "{{ op://${VAULT}/Pangolin/E-mail/E-mail Sender }}"
 
 flags:
   require_email_verification: false
